--- a/travis/Dockerfile
+++ b/travis/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:artful
+FROM ubuntu:bionic
 ENV LANG C.UTF-8
 ENV LC_ALL C.UTF-8
 
@@ -6,9 +6,10 @@ RUN apt-get update -qq
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends --no-install-suggests \
     sudo \
     unzip \
+    gnupg2 \
     wget
 
-RUN echo "deb http://apt.llvm.org/artful/ llvm-toolchain-artful-5.0 main" >> /etc/apt/sources.list
+RUN echo "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic main" >> /etc/apt/sources.list
 RUN wget --no-check-certificate -O - https://apt.llvm.org/llvm-snapshot.gpg.key|sudo apt-key add -
 RUN apt-get update -qq
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends --no-install-suggests \
@@ -16,7 +17,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends --
     unzip \
     build-essential \
     ninja-build \
-    clang-5.0 \
+    clang-8 \
+    lldb-8 \
+    lld-8 \
     python3-minimal \
     python3-pip \
     python3-setuptools \
@@ -31,6 +34,8 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends --
     libpcl-dev \
     openjdk-8-jdk
 
+RUN apt-get clean
+
 # Workaround multiple bugs in Ubuntu's libpcl-dev package :(
 # Re: https://bugs.launchpad.net/ubuntu/+source/pcl/+bug/1738902
 RUN sed -i 's/pcl_2d-1.8//' /usr/lib/x86_64-linux-gnu/pkgconfig/pcl_features-1.8.pc && \
@@ -39,7 +44,6 @@ RUN sed -i 's/pcl_2d-1.8//' /usr/lib/x86_64-linux-gnu/pkgconfig/pcl_features-1.8
 # Installs Android NDK and creates the toolchain
 ENV ANDROID_NDK_VERSION r18b
 ENV ANDROID_TARGET_API 28
-ENV ANDROID_BUILD_TOOLS 28.0.3
 ENV ANDROID_NDK_HOME /android-ndk-${ANDROID_NDK_VERSION}
 ENV ANDROID_NDK_FILENAME android-ndk-${ANDROID_NDK_VERSION}-linux-x86_64.zip
 ENV ANDROID_TOOLCHAIN /android-arm-toolchain-${ANDROID_TARGET_API}
@@ -58,7 +62,8 @@ RUN echo "Downloading android-ndk" >&2 && \
     rm ${ANDROID_NDK_FILENAME}
 
 # Installs Android SDK
-ENV ANDROID_SDK_VERSION 3859397
+ENV ANDROID_BUILD_TOOLS 28.0.3
+ENV ANDROID_SDK_VERSION 4333796
 ENV ANDROID_SDK_FILENAME sdk-tools-linux-${ANDROID_SDK_VERSION}.zip
 ENV ANDROID_HOME /android-sdk
 ENV PATH ${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/tools/bin:${ANDROID_HOME}/platform-tools
@@ -74,8 +79,9 @@ RUN yes | sdkmanager --licenses
 RUN sdkmanager "tools" "platform-tools"
 RUN yes | sdkmanager \
     "platforms;android-${ANDROID_TARGET_API}" \
-    "build-tools;${ANDROID_BUILD_TOOLS}"
+    "build-tools;${ANDROID_BUILD_TOOLS}" \
+    "platform-tools"
 
-RUN apt-get clean
+ADD windows-sdk-10.0.17134.0.tar.bz2 /
 
 CMD ["/bin/bash"]
