--- a/.travis.yml
+++ b/.travis.yml
@@ -45,23 +45,42 @@ jobs:
         # install blender or clone the glimpse-training-data + glimpse-models
         # repos...
         - stage: quick checks
-          env: _="Quick Debug Build (distro provided dependencies)"
+          env: _="Quick Debug Build (clang, distro provided dependencies)"
           script: sudo docker run -t -i -v $TRAVIS_BUILD_DIR:/home/$USER/build
             -e TRAVIS_BUILD_DIR="/home/$USER/build"
-            -e CC=clang-8.0
-            -e CXX=clang++-8.0
+            -e CC=clang-8
+            -e CXX=clang++-8
             -e CONFIG_OPTS="--buildtype=debug -Duse_system_libs=true"
             final-travis-ci-image ./travis/travis-ci-build.sh
         - stage: quick checks
-          env: _="Quick Release Build (distro provided dependencies)"
+          env: _="Quick Release Build (clang, distro provided dependencies)"
           script: sudo docker run -t -i -v $TRAVIS_BUILD_DIR:/home/$USER/build
             -e TRAVIS_BUILD_DIR="/home/$USER/build"
-            -e CC=clang-8.0
-            -e CXX=clang++-8.0
+            -e CC=clang-8
+            -e CXX=clang++-8
             -e CFLAGS="-march=native -mtune=native"
             -e CXXFLAGS="-march=native -mtune=native"
             -e CONFIG_OPTS="--buildtype=release -Duse_system_libs=true"
             final-travis-ci-image ./travis/travis-ci-build.sh
+        - stage: quick checks
+          env: _="Quick Debug Build (gcc, distro provided dependencies)"
+          script: sudo docker run -t -i -v $TRAVIS_BUILD_DIR:/home/$USER/build
+            -e TRAVIS_BUILD_DIR="/home/$USER/build"
+            -e CC=gcc
+            -e CXX=g++
+            -e CONFIG_OPTS="--buildtype=debug -Duse_system_libs=true"
+            final-travis-ci-image ./travis/travis-ci-build.sh
+        - stage: quick checks
+          env: _="Quick Release Build (gcc, distro provided dependencies)"
+          script: sudo docker run -t -i -v $TRAVIS_BUILD_DIR:/home/$USER/build
+            -e TRAVIS_BUILD_DIR="/home/$USER/build"
+            -e CC=gcc
+            -e CXX=g++
+            -e CFLAGS="-march=native -mtune=native"
+            -e CXXFLAGS="-march=native -mtune=native"
+            -e CONFIG_OPTS="--buildtype=release -Duse_system_libs=true"
+            final-travis-ci-image ./travis/travis-ci-build.sh
+
 
         - stage: quick checks
           # XXX: can't use env: here because we need to share the cache with
@@ -69,8 +88,8 @@ jobs:
           #env: _="Mini Training Run"
           script: sudo docker run -t -i -v $TRAVIS_BUILD_DIR:/home/$USER/build
             -e TRAVIS_BUILD_DIR="/home/$USER/build"
-            -e CC=clang-8.0
-            -e CXX=clang++-8.0
+            -e CC=clang-8
+            -e CXX=clang++-8
             -e CFLAGS="-march=native -mtune=native"
             -e CXXFLAGS="-march=native -mtune=native"
             -e CONFIG_OPTS="--buildtype=release -Duse_system_libs=true"
@@ -83,16 +102,16 @@ jobs:
           env: _="Debug Build (subproject dependencies)"
           script: sudo docker run -t -i -v $TRAVIS_BUILD_DIR:/home/$USER/build
             -e TRAVIS_BUILD_DIR="/home/$USER/build"
-            -e CC=clang-8.0
-            -e CXX=clang++-8.0
+            -e CC=clang-8
+            -e CXX=clang++-8
             -e CONFIG_OPTS="--buildtype=debug -Duse_system_libs=false"
             final-travis-ci-image ./travis/travis-ci-build.sh
         - stage: build
           env: _="Release Build (subproject dependencies)"
           script: sudo docker run -t -i -v $TRAVIS_BUILD_DIR:/home/$USER/build
             -e TRAVIS_BUILD_DIR="/home/$USER/build"
-            -e CC=clang-8.0
-            -e CXX=clang++-8.0
+            -e CC=clang-8
+            -e CXX=clang++-8
             -e CFLAGS="-march=native -mtune=native"
             -e CXXFLAGS="-march=native -mtune=native"
             -e CONFIG_OPTS="--buildtype=release -Duse_system_libs=false"
@@ -108,6 +127,18 @@ jobs:
           script: sudo docker run -t -i -v $TRAVIS_BUILD_DIR:/home/$USER/build
             -e TRAVIS_BUILD_DIR="/home/$USER/build"
             -e CONFIG_OPTS="--cross-file=../android-armeabi-v7a-cross-file.txt --buildtype=release"
+            final-travis-ci-image ./travis/travis-ci-build.sh
+        - stage: build
+          env: _="Windows Debug Build"
+          script: sudo docker run -t -i -v $TRAVIS_BUILD_DIR:/home/$USER/build
+            -e TRAVIS_BUILD_DIR="/home/$USER/build"
+            -e CONFIG_OPTS="--cross-file=/windows-sdk/meson/windows-x64-debug-cross-file.txt --buildtype=debug"
+            final-travis-ci-image ./travis/travis-ci-build.sh
+        - stage: build
+          env: _="Windows Release Build"
+          script: sudo docker run -t -i -v $TRAVIS_BUILD_DIR:/home/$USER/build
+            -e TRAVIS_BUILD_DIR="/home/$USER/build"
+            -e CONFIG_OPTS="--cross-file=/windows-sdk/meson/windows-x64-release-cross-file.txt --buildtype=release"
             final-travis-ci-image ./travis/travis-ci-build.sh
 
 cache:
