travis: assume windows-sdk paths don't need updating
The meson cross-file paths under /windows-sdk/meson are already correct
in the Docker image so we don't need to try and change them.

--- a/travis/Dockerfile
+++ b/travis/Dockerfile
@@ -82,6 +82,6 @@ RUN yes | sdkmanager \
     "build-tools;${ANDROID_BUILD_TOOLS}" \
     "platform-tools"
 
-ADD windows-sdk-10.0.17134.0.tar.bz2 /
+ADD windows-sdk /
 
 CMD ["/bin/bash"]
