--- a/meson_options.txt
+++ b/meson_options.txt
@@ -12,6 +12,9 @@ option('android_tango_sdk', type: 'string',
 option('use_asset_manager', type: 'boolean', value: false,
        description: 'Whether to use the Android asset manager')
 
+option('realsense', type: 'feature', value: 'auto',
+       description: 'Whether to enable RealSense camera support')
+
 option('unity_project', type: 'string',
        description: 'Path to top of a Unity project where Glimpse plugin can be installed')
 option('unity_editor', type: 'string',
